--- a/src/pages/views/partida.ejs
+++ b/src/pages/views/partida.ejs
@@ -532,7 +532,7 @@
                         <% timeBLineup.forEach((jogador, index) => { %>
                             <tr>
                                 <td>
-                                    <a href="/jogador/<%= timeA.idTime %>/<%= jogador.idJogador %>"><%= jogador.nome %> <%= jogador.sobrenome %></a>
+                                    <a href="/jogador/<%= timeB.idTime %>/<%= jogador.idJogador %>"><%= jogador.nome %> <%= jogador.sobrenome %></a>
                                 </td>
                                 <!-- Inserir prognosticos de pontos assistencias e rebotes -->
                                 <% if (nextGame && nextGame.length > 0) { %>
