--- a/src/pages/views/partida.ejs
+++ b/src/pages/views/partida.ejs
@@ -286,7 +286,7 @@
                             </tr>
                             <tr>
                                 <th>Rebotes</th>
-                                <td><%= statsTA[0].totReb %></td>
+                                <td><%= statsTA[0].deReb %></td>
                             </tr>
                             <tr>
                                 <th>Rebotes ofensivos</th>
@@ -418,7 +418,7 @@
                             </tr>
                             <tr>
                                 <th>Rebotes</th>
-                                <td><%= statsTB[0].totReb %></td>
+                                <td><%= statsTB[0].deReb %></td>
                             </tr>
                             <tr>
                                 <th>Rebotes ofensivos</th>
